[package]
name = "Anti-Ripper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
dirs = "5.0.1"
indicatif = "0.17.6"
notify = "6.1.1"
reqwest = { version = "0.11.19", features = ["blocking", "json", "cookies"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
text_io = "0.1.12"
ua_generator = "0.3.5"
