[package]
name = "anti-ripper"
version = "1.0.3"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
dirs = "5.0.1"
indicatif = "0.17.6"
notify = "6.1.1"
rayon = "1.7.0"
regex = "1.9.3"
reqwest = { version = "0.11.19", features = ["blocking", "json", "cookies"] }
rodio = "0.17.1"
rpassword = "7.2.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
shadow-rs = "0.23.0"
text_io = "0.1.12"
ua_generator = "0.3.5"
winapi = { version = "0.3.9", features = ["tlhelp32", "processthreadsapi"] }

[build-dependencies]
shadow-rs = "0.23.0"

[profile.release]
lto = true
